debian: Patch rules to create tarball
Change-Id: Ibad511bf764d7f2a1a2a47c8640a05384a604182
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: snow
-Section: unknown
+Section: extra
 Priority: optional
 Maintainer: Philippe Coval <rzr@users.sf.net>
 Build-Depends: debhelper (>= 9)
