--- a/debian/rules
+++ b/debian/rules
@@ -1,25 +1,67 @@
 #!/usr/bin/make -f
-# See debhelper(7) (uncomment to enable)
-# output every command that modifies files on the build system.
-#export DH_VERBOSE = 1
+# -*- makefile -*-
+# ex: set tabstop=4 noexpandtab:
 
+# Comment this to turn off verbose mode.
+export DH_VERBOSE=1
+project?=snow
 
-# see FEATURE AREAS in dpkg-buildflags(1)
-#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+version?=$(shell [ -r debian/changelog ] \
+  && which dpkg-parsechangelog > /dev/null 2>&1 \
+  && dpkg-parsechangelog | grep "Version:" | sed -e "s/Version: \(.*\)-.*/\1/g" \
+  || echo "0.0")
+export version
 
-# see ENVIRONMENT in dpkg-buildflags(1)
-# package maintainers to append CFLAGS
-#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
-# package maintainers to append LDFLAGS
-#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+tarball?=${CURDIR}/../${project}_${version}.orig.tar.gz
+export tarball
 
+default: rule/debuild
+	@echo "#$@: $^"
 
 %:
 	dh $@
 
 
-# dh_make generated override targets
-# This is example for Cmake (See https://bugs.debian.org/641051 )
-#override_dh_auto_configure:
-#	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+rule/prep:
+	sync
+
+${tarball}: rule/prep
+	 tar cvfz "$@" \
+--transform "s|^./|${package}-${version}/|" \
+--exclude 'debian' --exclude-vcs \
+.
+	@ls -l $@
+
+rule/tarball: ${tarball}
+	@ls $^
+
+rule/dist: rule/tarball
+	@echo "# $@: $^"
+
+rule/setup: /etc/debian_version
+	sudo apt-get update -y
+	sudo apt-get install -y \
+  build-essential \
+  debhelper \
+  devscripts \
+\
+  libminiupnpc-dev libnatpmp-dev \
+  libssl-dev \
+  #EOL
+
+rule/version:
+	@echo ${version}
+	-cat /etc/os-release
+	${MAKE} --version
+	${CC} --version
+
+rule/debuild: debian/rules
+	@which ${@F} || ${<D}/${<F} ${@D}/setup
+	@ls ${tarball} || ${<D}/${<F} ${@D}/tarball
+	${<D}/${<F} ${@D}/version
+	${@F} -S -us -uc
+	${@F} -us -uc
+
+
+.PHONY: rule/debuild
 
